--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,6 @@
+body{
+  background-color: '#f0f2f5';
+}
 .card-center {
   display: flex;
   flex-direction: column;
@@ -12,6 +15,12 @@
   bottom: 0;
   position: absolute;
   width: 100%;
+  background-color: #000;
+  color: #fff;
+}
+.container{
+  padding: 25px 50px;
+  min-height: 80vh;
 }
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-inner-spin-button {
