--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,3 +23,7 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+.text-center {
+  text-align: center;
+}
