--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,8 +13,8 @@ body{
 }
 .ant-layout-footer {
   bottom: 0;
-  position: absolute;
-  width: 100%;
+  /* position: absolute;
+  width: 100%; */
   background-color: #000;
   color: #fff;
 }
