--- a/frontend/src/themes/light-theme.less
+++ b/frontend/src/themes/light-theme.less
@@ -1,3 +1,7 @@
 @import "~antd/lib/style/color/colorPalette.less";
 @import "~antd/dist/antd.less";
 @import "~antd/lib/style/themes/default.less";
+
+@layout-header-background: #fff;
+@layout-sider-background: #fff;
+@menu-item-color: #000;
