--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,20 +4,12 @@
   min-height: 100vh;
   justify-content: center;
 }
-.auth-card {
-  max-height: 600px;
+.card-center > .ant-card {
+  width: 500px;
   margin: auto;
-}
-.ant-layout-footer {
-  bottom: 0;
-  /* position: absolute;
-  width: 100%; */
-  background-color: #000;
-  color: #fff;
 }
 .container{
   padding: 25px 50px;
-  min-height: 80vh;
 }
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-inner-spin-button {
@@ -35,11 +27,11 @@ input[type="number"] {
 }
 .otp-input{  
   width: 100% !important;
-  margin: 1rem 0.5rem;
-  height: 3em;
+  margin: 1rem 0.5rem !important;
+  height: 4em;
 }
 .logo {
   height: 32px;
   margin: 16px;
-  background: rgba(255, 255, 255, 0.3);
+  background: #00b7ff;
 }
