--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.0/css/bootstrap-utilities.min.css');
 .card-center {
   display: flex;
   flex-direction: column;
@@ -41,4 +42,7 @@ input[type="number"] {
 ::-webkit-scrollbar-thumb {
   background: rgb(155, 153, 153);
   border-radius: 20px;
+}
+.full-height{
+  min-height: 80vh;
 }
