--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,7 +10,7 @@
   margin: auto;
 }
 .container {
-  padding: 25px 50px;
+  padding: 12px 16px;
 }
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-inner-spin-button {
@@ -40,9 +40,14 @@ input[type="number"] {
   width: 2px;
 }
 ::-webkit-scrollbar-thumb {
-  background: rgb(155, 153, 153);
+  background: rgb(201, 201, 201);
   border-radius: 20px;
 }
 .full-height{
-  min-height: 80vh;
+  height: 60vh;
+  overflow: scroll;
+}
+
+.ant-layout-footer {
+    padding: 20px 40px !important;
 }
