--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,8 +6,9 @@
   justify-content: center;
 }
 .card-center > .ant-card {
-  width: 500px;
+  width: 450px;
   margin: auto;
+  padding: 1rem;
 }
 .container {
   padding: 12px 16px;
@@ -26,10 +27,11 @@ input[type="number"] {
 .text-center {
   text-align: center;
 }
-.otp-input {
-  width: 100% !important;
-  margin: 1rem 0.5rem !important;
-  height: 4em;
+.otp-input {  
+    width: 3.5rem !important;
+    margin: 1rem 0.5rem !important;
+    height: 3.5rem;
+    font-weight: bold;
 }
 .logo {
   height: 32px;
