--- a/frontend/src/themes/dark-theme.less
+++ b/frontend/src/themes/dark-theme.less
@@ -1,3 +1,11 @@
 @import "~antd/lib/style/color/colorPalette.less";
 @import "~antd/dist/antd.less";
 @import "~antd/lib/style/themes/dark.less";
+
+@component-background: #253054;
+@layout-body-background: #19203a;
+@layout-header-background: #212b50;
+@layout-sider-background: @component-background;
+@primary-color: #4a73ff;
+
+
