--- a/frontend/src/themes/light-theme.less
+++ b/frontend/src/themes/light-theme.less
@@ -3,6 +3,7 @@
 @import "~antd/lib/style/themes/default.less";
 
 @layout-header-background: #fff;
-@layout-sider-background: #fff;
-@layout-footer-background: #fff;
+@layout-sider-background: @layout-header-background;
+@layout-footer-background: @layout-header-background;
 @menu-item-color: #000;
+@primary-color: #4a73ff;
