--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -56,3 +56,12 @@ input[type="number"] {
 .overflow-auto {
   overflow: auto;
 }
+.custom-card{
+  .ant-list-item-meta{
+    padding: 0 1rem !important;
+    cursor: pointer;
+  }
+  .ant-list-item-action{
+    visibility: hidden;
+  }
+}
