--- a/frontend/src/themes/dark-theme.less
+++ b/frontend/src/themes/dark-theme.less
@@ -6,6 +6,9 @@
 @layout-body-background: #19203a;
 @layout-header-background: #212b50;
 @layout-sider-background: @component-background;
-@primary-color: #4a73ff;
+@primary-color: #b2b7c7;
 
 
+.custom-card:hover{
+    background-color: #212b50;
+}
