--- a/frontend/src/themes/light-theme.less
+++ b/frontend/src/themes/light-theme.less
@@ -7,3 +7,10 @@
 @layout-footer-background: @layout-header-background;
 @menu-item-color: #000;
 @primary-color: #4a73ff;
+
+.custom-card:hover{
+    background-color: #f0f2f5;
+}
+.custom-card > .ant-list-item-meta-title{
+color: @primary-color;
+}
