--- a/frontend/src/themes/dark-theme.less
+++ b/frontend/src/themes/dark-theme.less
@@ -10,3 +10,13 @@
 .custom-card:hover{
     background-color: #212b50;
 }
+.ant-empty-img-simple-path {
+    fill: rgb(45 130 229);
+    stroke: rgb(45 130 229);
+}
+.ant-empty-normal, .ant-empty-small {
+    color: rgb(255 255 255);
+}
+.ant-card-bordered {
+    border: 1px solid rgb(37 48 84);
+}
