--- a/frontend/src/themes/dark-theme.less
+++ b/frontend/src/themes/dark-theme.less
@@ -2,21 +2,17 @@
 @import "~antd/dist/antd.less";
 @import "~antd/lib/style/themes/dark.less";
 
-@component-background: #253054;
-@layout-body-background: #19203a;
-@layout-header-background: #212b50;
-@layout-sider-background: @component-background;
+// @component-background: #253054;
+// @layout-body-background: #19203a;
+// @layout-header-background: #212b50;
+// @layout-sider-background: @component-background;
+// .ant-card-bordered { border: 1px solid rgb(37 48 84); }
+// .custom-card:hover{ background-color: #212b50; }
 
-.custom-card:hover{
-    background-color: #212b50;
-}
 .ant-empty-img-simple-path {
     fill: rgb(45 130 229);
     stroke: rgb(45 130 229);
 }
 .ant-empty-normal, .ant-empty-small {
     color: rgb(255 255 255);
-}
-.ant-card-bordered {
-    border: 1px solid rgb(37 48 84);
 }
