--- a/frontend/src/themes/dark-theme.less
+++ b/frontend/src/themes/dark-theme.less
@@ -9,6 +9,7 @@
 // .ant-card-bordered { border: 1px solid rgb(37 48 84); }
 // .custom-card:hover{ background-color: #212b50; }
 
+.ant-list-item-meta-title{margin: 0;}
 .ant-empty-img-simple-path {
     fill: rgb(45 130 229);
     stroke: rgb(45 130 229);
