--- a/frontend/src/themes/light-theme.less
+++ b/frontend/src/themes/light-theme.less
@@ -8,6 +8,7 @@
 @menu-item-color: #000;
 @primary-color: #4a73ff;
 
+.ant-list-item-meta-title{margin: 0;}
 .custom-card:hover{
     background-color: #f0f2f5;
 }
